# CSVtoSEPAXML

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.example.json  config_from_de_prompt.json  generated_template_extended.csv  generated_template_minimal.csv  input_extended.csv  input_minimal.csv
src/csv_to_sepa/: __init__.py  cli.py  config.py  csv_reader.py  normalize.py  pain001_writer.py  template.py  validate.py
src/csv_to_sepa_xml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_check_namespace.py  test_cli_init_config.py  test_cli_localization.py  test_cli_validate_xml.py  test_config_interactive.py  test_csv_reader_english_headers.py  test_csv_reader_extended.py  test_normalize.py  test_template.py  test_validate.py  test_writer.py
xsd/: EPC132-08_2025_V1.0_pain.001.001.09.xsd  EPC132-08_2025_V1.0_pain.001.001.09_ERI.xsd  EPC132-08_2025_V1.0_pain.001.001.09_TB.xsd  EPC132-08_2025_V1.0_pain.002.001.10.xsd  pain.001.001.09.xsd
