[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-to-sepa-xml"
version = "0.1.0"
description = "Convert CSV files to SEPA Credit Transfer XML (pain.001.001.09)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CSVtoSEPAXML" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
xml = ["lxml>=5.0"]

[project.scripts]
csv-to-sepa = "csv_to_sepa.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
